[package]
name = "gztest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres"] }
geozero = { version = "*", git = "https://github.com/myaple/geozero", branch = "dev/diesel-postgis", features = ["with-postgis-diesel"] }
